# arka.fund

./: .gitignore  GOVERNANCE_RUNBOOK.md  GOVERNANCE_WIRING.md  README.md  deployments.mainnet.json  deployments.testnet.json  rust-toolchain.toml  technical-architecture-es.md
contracts/: Cargo.toml
contracts/adapter-aquarius/: Cargo.toml
contracts/adapter-aquarius/src/: lib.rs  test.rs
contracts/adapter-aquarius/test_snapshots/test/: test_execute_placeholder.1.json  test_execute_smoke.1.json  test_swap_with_tokens_live_signature.1.json
contracts/adapter-balanced/: Cargo.toml
contracts/adapter-balanced/src/: lib.rs  test.rs
contracts/adapter-balanced/test_snapshots/test/: test_execute_placeholder.1.json  test_execute_requires_supported_pool.1.json  test_execute_with_router.1.json
contracts/adapter-blend/: Cargo.toml
contracts/adapter-blend/src/: lib.rs  test.rs
contracts/adapter-blend/test_snapshots/test/: test_execute_lend_and_borrow.1.json  test_execute_placeholder.1.json  test_execute_submit_path_with_market_asset.1.json
contracts/adapter-comet/: Cargo.toml
contracts/adapter-comet/src/: lib.rs
contracts/adapter-comet/test_snapshots/test/: test_execute_placeholder.1.json
contracts/adapter-phoenix/: Cargo.toml
contracts/adapter-phoenix/src/: lib.rs  test.rs
contracts/adapter-phoenix/test_snapshots/test/: test_execute_placeholder.1.json  test_execute_requires_caller_auth.1.json  test_pool_route_is_admin_gated.1.json  (+1 more)
contracts/adapter-soroswap/: Cargo.toml
contracts/adapter-soroswap/src/: lib.rs  test.rs
contracts/arka/: Cargo.toml
contracts/arka-factory/: Cargo.toml
contracts/arka-factory/src/: lib.rs  test.rs
contracts/arka-registry/: Cargo.toml
contracts/arka-registry/src/: lib.rs  test.rs
contracts/arka-token/: Cargo.toml
contracts/arka-token/src/: lib.rs  test.rs
contracts/arka-vesting/: Cargo.toml
contracts/arka-vesting/src/: lib.rs  test.rs
contracts/arka-vesting/test_snapshots/: integration_claim_all_round_trips_multiple_grants.1.json
contracts/arka-vesting/tests/: vesting_integration.rs
contracts/arka/src/: lib.rs  test.rs
contracts/arka/test_snapshots/: configuration_changes_emit_provider_ready_events.1.json  fee_engine_end_to_end_settles_performance_and_preserves_fee_ownership_on_redeem.1.json  fee_engine_live_path_validates_management_and_performance_with_real_token_transfers.1.json  global_registry_auto_venue_allows_rebalance.1.json  global_registry_disabled_venue_blocks_rebalance.1.json  management_fee_preview_and_protocol_split_are_exposed_via_public_api.1.json
contracts/arka/tests/: fee_engine_e2e.rs  fee_engine_integration.rs  fee_engine_live_validation.rs  global_venue_policy_e2e.rs  indexer_events.rs
contracts/balanced-router-mock/: Cargo.toml
contracts/balanced-router-mock/src/: lib.rs  test.rs
contracts/blend-router-mock/: Cargo.toml
contracts/blend-router-mock/src/: lib.rs  test.rs
contracts/claims-manager/: Cargo.toml
contracts/claims-manager/src/: lib.rs  test.rs
contracts/claims-manager/test_snapshots/: e2e_freeze_reject_retrigger_and_execute_path.1.json  integration_executes_full_waterfall_with_treasury_top_up.1.json
contracts/claims-manager/tests/: incident_flow_e2e.rs  incident_flow_integration.rs
contracts/coverage-fund/: Cargo.toml
contracts/coverage-fund/src/: lib.rs  test.rs
contracts/coverage-fund/test_snapshots/: e2e_community_reserve_and_manager_first_loss_work_together.1.json  integration_claims_both_reward_streams_with_live_premium_routing.1.json
contracts/coverage-fund/tests/: coverage_economics_e2e.rs  coverage_economics_integration.rs
contracts/coverage-vault/: Cargo.toml
contracts/coverage-vault/src/: lib.rs  test.rs
contracts/emissions-controller/: Cargo.toml
contracts/emissions-controller/src/: lib.rs  test.rs
contracts/emissions-controller/test_snapshots/: e2e_governed_tokenomics_flows_release_vesting_emissions_and_lock_votes.1.json  integration_release_all_round_trips_multiple_streams.1.json
contracts/emissions-controller/tests/: emissions_integration.rs  tokenomics_e2e.rs
contracts/governance-executor/: Cargo.toml
contracts/governance-executor/src/: lib.rs  test.rs
contracts/governance-executor/test_snapshots/: e2e_executor_controls_arka_and_coverage_after_handoff.1.json  integration_batches_factory_fee_defaults_through_executor.1.json  integration_updates_coverage_policy_through_executor.1.json
contracts/governance-executor/tests/: timelock_e2e.rs  timelock_integration.rs
contracts/governance-token/: Cargo.toml
contracts/governance-token/src/: lib.rs  test.rs
contracts/locked-arka/: Cargo.toml
contracts/locked-arka/src/: lib.rs  test.rs
contracts/locked-arka/test_snapshots/: e2e_executor_controls_token_and_snapshot_fence_over_locked_arka.1.json  integration_round_trips_underlying_and_lock_state.1.json
contracts/locked-arka/tests/: lock_flow_integration.rs  token_power_e2e.rs
contracts/manager-tier/: Cargo.toml
contracts/manager-tier/src/: lib.rs  test.rs
contracts/oracle-guard/: Cargo.toml
contracts/oracle-guard/src/: lib.rs  test.rs
contracts/oracle-guard/test_snapshots/: fail_closes_when_secondary_confirmation_is_required_and_missing.1.json  optional_provider_none_is_treated_as_unusable_price.1.json  public_api_fail_closes_divergent_symbol_feeds.1.json  public_api_supports_symbol_assets_and_policy_clearing.1.json  stellar_asset_can_query_provider_symbol_asset.1.json  uses_secondary_test_oracle_when_feeds_diverge.1.json
contracts/oracle-guard/tests/: guard_integration.rs  test_oracle_integration.rs
contracts/router/: Cargo.toml
contracts/router/src/: lib.rs  test.rs
contracts/share-token/: Cargo.toml
contracts/share-token/src/: lib.rs  test.rs
contracts/test-oracle/: Cargo.toml
contracts/test-oracle/src/: lib.rs  test.rs
contracts/test-profit-adapter/: Cargo.toml
contracts/test-profit-adapter/src/: lib.rs  test.rs
contracts/test-token/: Cargo.toml
contracts/test-token/src/: lib.rs
contracts/venue-registry/: Cargo.toml
contracts/venue-registry/src/: lib.rs  test.rs
(+590 files in other folders)
