[workspace]
members = [
    "arka-vesting",
    "arka-token",
    "arka",
    "arka-factory",
    "arka-registry",
    "emissions-controller",
    "oracle-guard",
    "router",
    "venue-registry",
    "adapter-aquarius",
    "adapter-soroswap",
    "adapter-phoenix",
    "adapter-balanced",
    "adapter-blend",
    "blend-router-mock",
    "coverage-vault",
    "coverage-fund",
    "claims-manager",
    "governance-executor",
    "locked-arka",
    "manager-tier",
    "governance-token",
    "share-token",
    "test-oracle",
    "test-profit-adapter",
    "test-token",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "Apache-2.0"
version = "0.1.0"
authors = ["Arka.fund Team"]

[workspace.dependencies]
soroban-sdk = { version = "23.0.0" }
