[package]
name = "arka-factory"
description = "Factory contract for deploying Arka instances"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
arka-registry = { path = "../arka-registry" }

[features]
default = []
testutils = ["soroban-sdk/testutils"]



