[package]
name = "arka"
description = "ArkaLogic: core Soroban contract for Arkafund"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
adapter-blend = { path = "../adapter-blend" }
blend-router-mock = { path = "../blend-router-mock" }
oracle-guard = { path = "../oracle-guard" }
router = { path = "../router" }
test-token = { path = "../test-token", features = ["testutils"] }
test-profit-adapter = { path = "../test-profit-adapter", features = ["testutils"] }
venue-registry = { path = "../venue-registry", features = ["testutils"] }

[features]
default = []
testutils = ["soroban-sdk/testutils"]
