[package]
name = "claims-manager"
description = "Incident registry and claims execution controller"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
coverage-fund = { path = "../coverage-fund", features = ["testutils"] }
coverage-vault = { path = "../coverage-vault", features = ["testutils"] }

[features]
default = []
testutils = ["soroban-sdk/testutils"]
