[package]
name = "coverage-fund"
description = "Community coverage fund staking contract"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
coverage-vault = { path = "../coverage-vault" }

[features]
default = []
testutils = ["soroban-sdk/testutils"]


