[package]
name = "locked-arka"
description = "Locked ARKA voting-power escrow contract"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
arka-token = { path = "../arka-token", features = ["testutils"] }
governance-executor = { path = "../governance-executor", features = ["testutils"] }

[features]
default = []
testutils = ["soroban-sdk/testutils"]
