[package]
name = "share-token"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
soroban-sdk = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }

[features]
default = []
testutils = ["soroban-sdk/testutils"]
